DeviceController Category assign, remove 추가